--- a/app/src/main/res/layout/notification_row.xml
+++ b/app/src/main/res/layout/notification_row.xml
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:foreground="?android:selectableItemBackground"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="48dp"
-                android:clickable="true">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:foreground="?android:selectableItemBackground"
+    android:minHeight="48dp"
+    android:orientation="vertical">
 
     <TextView
-        android:orientation="vertical"
+        android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="24dp"
-        android:id="@+id/text"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall"
+        android:layout_toLeftOf="@+id/overflow"
+        android:layout_toStartOf="@+id/overflow"
+        android:background="?attr/selectableItemBackground"
         android:gravity="center_vertical"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
-        android:layout_toLeftOf="@+id/clearNotifications"
-        android:layout_toStartOf="@+id/clearNotifications"/>
+        android:orientation="vertical"
+        android:paddingLeft="24dp"
+        android:textAppearance="?android:attr/textAppearanceListItemSmall" />
 
     <ImageView
+        android:id="@+id/overflow"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:id="@+id/clearNotifications"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:clickable="true"
-        android:padding="@dimen/gapLarge"
-        android:src="@drawable/ic_action_overflow"
-        style="?android:borderlessButtonStyle"
         android:focusable="false"
-        android:focusableInTouchMode="false"/>
+        android:focusableInTouchMode="false"
+        android:padding="@dimen/gapLarge"
+        android:src="@drawable/ic_action_overflow" />
 </RelativeLayout>
