--- a/app/src/main/res/layout/generic_toolbar_coordinator.xml
+++ b/app/src/main/res/layout/generic_toolbar_coordinator.xml
@@ -4,6 +4,8 @@
                                                  android:layout_width="match_parent"
                                                  android:layout_height="match_parent"
                                                  android:orientation="vertical"
+                                                 android:fitsSystemWindows="true"
+                                                 android:id="@+id/coordinator"
     >
 
   <android.support.design.widget.AppBarLayout
@@ -15,27 +17,15 @@
         android:id="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:contentInsetStart="@dimen/second_keyline"
         app:popupTheme="@style/Toolbar.Popup.AppCompat"
         app:theme="@style/Toolbar.AppCompat.Responsive"
-        app:layout_scrollFlags="scroll|exitUntilCollapsed"
         />
   </android.support.design.widget.AppBarLayout>
+
   <FrameLayout
       android:id="@+id/content"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
-      />
-
-  <android.support.design.widget.FloatingActionButton
-      android:id="@id/fabButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_alignParentBottom="true"
-      android:layout_centerHorizontal="true"
-      android:layout_gravity="end|bottom"
-      android:layout_margin="16dp"
-      app:borderWidth="0dp"
       />
 </android.support.design.widget.CoordinatorLayout>
