--- a/app/src/main/res/layout/issue_detail_issue_timeline_review_secondary_view.xml
+++ b/app/src/main/res/layout/issue_detail_issue_timeline_review_secondary_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="horizontal"
@@ -46,15 +47,37 @@
         android:textSize="@dimen/textSizeSmall"
         />
 
-    <com.alorma.diff.lib.DiffTextView
-        android:id="@+id/textDiff"
-        style="@style/TextAppearance.AppCompat.Caption"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/gapMedium"
-        android:textColor="@color/secondary_text"
-        android:textSize="@dimen/textSizeSmall"
-        />
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="2dp"
+        android:layout_marginTop="4dp"
+        >
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical"
+          >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textDiffFileTitle"
+            android:maxLines="1"
+            android:ellipsize="middle"
+            />
+        <com.alorma.diff.lib.DiffTextView
+            android:id="@+id/textDiff"
+            android:padding="4dp"
+            style="@style/TextAppearance.AppCompat.Caption"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/gapMedium"
+            android:textColor="@color/secondary_text"
+            android:textSize="@dimen/textSizeSmall"
+            />
+      </LinearLayout>
+    </android.support.v7.widget.CardView>
 
     <TextView
         android:id="@+id/bodyText"
