--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -20,6 +20,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
+        app:expandedTitleMarginStart="112dp"
+        app:expandedTitleMarginTop="0dp"
+        app:expandedTitleGravity="center"
+        app:contentScrim="?colorPrimary"
         app:layout_behavior="com.alorma.github.ui.utils.AvatarImageBehavior"
         app:layout_scrollFlags="scroll|exitUntilCollapsed"
         >
@@ -27,10 +31,11 @@
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="@dimen/gapXLarge"
+          android:layout_marginTop="56dp"
           android:fitsSystemWindows="true"
-          android:orientation="vertical"
+          android:orientation="horizontal"
           app:layout_collapseMode="parallax"
+          android:padding="8dp"
           >
 
         <ImageView
@@ -43,23 +48,11 @@
             />
 
         <TextView
-            android:id="@id/userLogin"
-            style="@style/TextAppearance.AppCompat.Headline"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/gapSmall"
-            android:gravity="center_horizontal"
-            android:maxLines="1"
-            android:textSize="36sp"
-            tools:text="ALORMA"
-            />
-
-        <TextView
             android:id="@+id/userName"
             style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/gapSmall"
+            android:layout_marginTop="72dp"
             android:gravity="center_horizontal"
             android:maxLines="1"
             android:textSize="22sp"
@@ -67,15 +60,16 @@
             tools:text="Bernat Borrás Paronella"
             />
       </LinearLayout>
-
       <android.support.v7.widget.Toolbar
           android:id="@id/toolbar"
           android:layout_width="match_parent"
           android:layout_height="?actionBarSize"
           app:layout_collapseMode="pin"
-          app:popupTheme="@style/Toolbar.Popup.AppCompat"
+          android:minHeight="?actionBarSize"
           app:theme="@style/Toolbar.AppCompat.Responsive.Transparent"
+          android:background="?colorPrimary"
           />
+
     </android.support.design.widget.CollapsingToolbarLayout>
 
     <android.support.design.widget.TabLayout
