--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,7 +89,6 @@
          parent="Widget.AppCompat.ActionMode">
     <item name="android:paddingLeft">@dimen/toolbar_h_padding</item>
     <item name="android:paddingRight">@dimen/toolbar_h_padding</item>
-    <item name="android:background">@color/primary</item>
   </style>
 
 
@@ -179,7 +178,7 @@
 
   <style name="Repos.Title"
          parent="TextAppearance.AppCompat.Headline">
-    <item name="android:textColor">?attr/gitskarios_title</item>
+    <item name="android:textColor">?colorAccent</item>
     <item name="android:ellipsize">end</item>
     <item name="android:lines">1</item>
   </style>
@@ -233,4 +232,5 @@
     <item name="android:ellipsize">end</item>
     <item name="android:maxLines">1</item>
   </style>
+
 </resources>
