--- a/app/src/main/res/layout/notifications_activity.xml
+++ b/app/src/main/res/layout/notifications_activity.xml
@@ -14,7 +14,10 @@
       android:background="?colorPrimaryDark"
       android:text="@string/notifications"
       android:checked="true"
+      android:paddingLeft="72dp"
+      android:paddingStart="72dp"
       android:padding="8dp"
+      android:textSize="16sp"
       android:textColor="@color/white"
       />
 
